--- a/www/home.html
+++ b/www/home.html
@@ -8,8 +8,34 @@
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+function validateForm() {
+    var firstName = document.forms["myForm"]["fname"].value;
+    if (firstName == "") {
+       // alert("First Name Must Be filled");
+		document.getElementById("demo").innerHTML = "First Name Missing";
+    }
+	
+	var LastName = document.forms["myForm"]["lname"].value;
+    if (LastName == "") {
+		document.getElementById("demo").innerHTML = "Last Name Missing";
+    }
 
+	var MobileNumber = document.forms["myForm"]["mobile"].value;
+    if (MobileNumber == "") {
+		document.getElementById("demo").innerHTML = "Mobile Number Missing";
+    }	
+	var HomeNumber = document.forms["myForm"]["home"].value;
+    if (HomeNumber == "") {
+		document.getElementById("demo").innerHTML = "Home Number Missing";
+    }	
+	else
+	{
+	document.getElementById("demo").innerHTML = " Input Accepted";
+	}
+	}
 
+</script>
 </head> 
 <body> 
 
@@ -78,15 +104,19 @@
 	</div>
 </div>
 
+	<form name="myForm" action="demo_form.asp"
+
+
+	
 	
 <div id="section4" data-role="page" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h4>Student Registration</h4>
 		<a href="home.html" style="color:black">Back</a> 
-<form action="#">
+<form name="myForm" action="#" onsubmit="validateForm()" method="post">
 <p id="demo" style="color:red"></p>
-	<p>    First Nmame :     <input type="text" name="fname" placeholder="First Name" id="fname" required> </p>
-		<p>    Last Nmame :     <input type="text" name="lname" placeholder="Last Name" id="lname" required> </p>
+	<p>    First Nmame :     <input type="text" name="fname" placeholder="First Name" id="fname" > </p>
+		<p>    Last Nmame :     <input type="text" name="lname" placeholder="Last Name" id="lname" > </p>
 <p> Country : 
 <select name="Country" id="countryName">
 <option value="USA">USA</option>
@@ -94,14 +124,14 @@
   <option value="ENG">ENG</option>
   <option value="AUS">AUS</option>
 </select></p>
-<p>Mobile Number :     <input type="text" name="MobileNumber" placeholder="Mobile #" id="mobile" required> </p> 
-	<p>Home Number :     <input type="text" name="HomeNumber" placeholder="Home #" id="home" required> </p> 
+<p>Mobile Number :     <input type="text" name="MobileNumber" placeholder="Mobile #" id="mobile" > </p> 
+	<p>Home Number :     <input type="text" name="HomeNumber" placeholder="Home #" id="home" > </p> 
 <p>Contact Via :
 <label><input type="checkbox" id="emailcheck" value="first_checkbox"> Home </label>
 <label><input type="checkbox" id="mobilecheck" value="first_checkbox"> Mobile </label>
 	</p>
 <br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" onClick="validateForm()">
 </form>	
 	</div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
