--- a/www/home.html
+++ b/www/home.html
@@ -8,6 +8,9 @@
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
+<script>
+$("#srchForm").load("searchform.html");
+</script>
 <script type="text/javascript">
 function validateForm() {
     var firstName = document.forms["myForm"]["fname"].value;
@@ -156,7 +159,7 @@ function validateForm() {
 	  <h1>Query</h1>
 		<a href="home.html" style="color:black">Back</a>  
 	</div>
-	<div data-include="/searchform.html">	
+	<div id="srchForm">	
 		
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
