--- a/www/home.html
+++ b/www/home.html
@@ -8,9 +8,6 @@
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
-<script>
-$("#srchForm").load("searchform.html");
-</script>
 <script type="text/javascript">
 function validateForm() {
     var firstName = document.forms["myForm"]["fname"].value;
@@ -48,6 +45,10 @@ function validateForm() {
 	document.getElementById("demo").innerHTML = " Input Accepted";
 	}
 	}
+	
+	$(document).ready(function(){   
+$("#srchForm").load("./searchform.html");
+});
 
 </script>
 </head> 
@@ -63,7 +64,7 @@ function validateForm() {
             <li><a href="#section2">Course Offering</a></li>
 			<li><a href="#section3">Locations</a></li>
 			<li><a href="#section4">Student Registration</a></li>
-			<li><a href="#section5">Query</a></li>
+			<li><a href="#section5">Query</a></li> 
 			<li><a href="#section6">Contact Us</a></li>
 		</ul>		
 	</div>
@@ -155,18 +156,40 @@ function validateForm() {
 	</div>
 	
 <div id="section5" data-role="page" data-theme="b">
-	<div data-role="header" data-theme="b">
-	  <h1>Query</h1>
-		<a href="home.html" style="color:black">Back</a>  
-	</div>
-	<div id="srchForm">	
-		
-	</div>
-	<div data-role="footer"  style=" bottom:0;" data-theme="b">
-	  <h4>Rasmussen College &copy; 2015</h4>
-	</div>
-</div>
 	
+	<div data-role="header" data-theme="b">
+<h1>
+	Search
+		</h1>	
+		<a href="home.html" style="color:black">Back</a> 
+		</div>
+		
+				<div data-role="content">
+
+		               <form method="post" action="find.php">
+                  <table width="400" border="0" cellspacing="1" cellpadding="2">
+                     
+                     <tr>
+                        <td width="100">First Name</td>
+						<td><input name="fname" type="text" id="fname"></td>
+                     </tr>
+					   <tr>
+					   <td width="100">Last Name</td>
+                        <td><input name="lname" type="text" id="lname"></td>
+                     </tr>
+                        <td>
+                           <input name="find" type="submit" id="add" value="Search">
+                        </td>
+                     </tr>
+
+                  </table>
+               </form>
+	</div>
+	<div data-role="footer" style=" bottom:0;" data-theme="b">
+	   <h4>Rasmussen College &copy; 2015</h4>
+	</div>
+	</div>
+
 <div data-role="page" id="section6" data-theme="b">
 	<div data-role="header" data-theme="b">
 		<h1>Contact Us</h1>
