--- a/www/index.html
+++ b/www/index.html
@@ -8,24 +8,9 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>College Home</title>
-		<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '182749692255283',
-      xfbml      : true,
-      version    : 'v2.9'
-    });
-    FB.AppEvents.logPageView();
-  };
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="833665607730-2h5mhsv8gbjhs894tso1m8fdk0c01lkd.apps.googleusercontent.com">
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
     </head>
     <body>
         <div class="app">
@@ -46,6 +31,8 @@
   data-share="true"
   data-width="450"
   data-show-faces="true">
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 </div>
     </body>
 </html>
