--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,12 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-		
-  <div class="g-signin2" data-onsuccess="onSignIn"></div>
-
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+  
 </div>
     </body>
 </html>
