--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,36 @@
         <title>College Home</title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="833665607730-2h5mhsv8gbjhs894tso1m8fdk0c01lkd.apps.googleusercontent.com">
+<script>
+	var Notification = window.Notification || window.mozNotification || window.webkitNotification;
+
+	Notification.requestPermission(function (permission) {
+		// console.log(permission);
+	});
+
+	function show() {
+		var instance = new Notification(
+			"This is a Test  Notification for Module 05", {
+				body: "This is a test message for module 05"
+			}
+		);
+
+		instance.onclick = function () {
+			// Something to do
+		};
+		instance.onerror = function () {
+			// Something to do
+		};
+		instance.onshow = function () {
+			// Something to do
+		};
+		instance.onclose = function () {
+			// Something to do
+		};
+	}
+</script>
+
+<button type="button" onclick="show()">Notify me!</button>
 
     </head>
     <body>
