--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,14 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-		
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+  <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+</div>
     </body>
 </html>
 Contact GitHub API Training Shop Blog About
