--- a/www/home.html
+++ b/www/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Rasmussen College</title>
+<title>Lisa's Botique</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="css/custom[1].css" rel="stylesheet" type="text/css">
