--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>College Home</title>
+        <title></title>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="833665607730-2h5mhsv8gbjhs894tso1m8fdk0c01lkd.apps.googleusercontent.com">
 <script>
@@ -46,7 +46,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>Rasmussen College</h1>
+            <h1>Lisa's Boutique</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">College site</p>
                 <p class="event received">Device is Ready and you can click on below link </p>
