--- a/www/home.html
+++ b/www/home.html
@@ -111,6 +111,7 @@ $("#srchForm").load("./searchform.html");
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 <div data-role="footer"  style=" bottom:0;" data-theme="b">
+ <div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 	  <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
