--- a/www/home.html
+++ b/www/home.html
@@ -128,6 +128,7 @@ $("#srchForm").load("./searchform.html");
 	  <p></p>
       </div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
+<div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
@@ -168,6 +169,7 @@ $("#srchForm").load("./searchform.html");
 </form>	
 	</div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
+<div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 	</div>
@@ -203,6 +205,7 @@ $("#srchForm").load("./searchform.html");
                </form>
 	</div>
 	<div data-role="footer" style=" bottom:0;" data-theme="b">
+<div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 	   <h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 	</div>
@@ -233,6 +236,7 @@ $("#srchForm").load("./searchform.html");
 </form>	
 	</div>
 	<div data-role="footer"  style=" bottom:0;" data-theme="b">
+<div class="logo"><img src="img/LOGO.png" width="200" height="200" alt=""/>
 		<h4>lisa's Boutique &copy; 2017</h4>
 	</div>
 </div>
