--- a/www/index.html
+++ b/www/index.html
@@ -48,9 +48,9 @@
         <div class="app">
             <h1>Lisa's Boutique</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">College site</p>
+                <p class="event listening">Fashion</p>
                 <p class="event received">Device is Ready and you can click on below link </p>
-                <a href="home.html"><font style="font-size: 40px;">College Home</font></a>
+                <a href="home.html"><font style="font-size: 40px;">Lisa's Botique</font></a>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
