--- a/www/index.html
+++ b/www/index.html
@@ -47,9 +47,8 @@
     <body>
         <div class="app">
             <h1>Lisa's Boutique</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Fashion</p>
-                <p class="event received">Device is Ready and you can click on below link </p>
+            <div id="deviceready" class="blink"
+		 <p class="event received">Device is Ready and you can click on below link </p>
                 <a href="home.html"><font style="font-size: 40px;">Lisa's Botique</font></a>
             </div>
         </div>
